--- a/index.html
+++ b/index.html
@@ -1,1 +1,264 @@
-Contrast Security
+
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="">
+
+    <title>Product example for Bootstrap</title>
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <link href="css/product.css" rel="stylesheet">
+    <link href="css/contrast.css" rel="stylesheet">
+
+
+  </head>
+
+  <body>
+
+    <nav class="site-header sticky-top py-1">
+      <div class="container d-flex flex-column flex-md-row justify-content-between">
+        <a class="py-2" href="#">
+          <img src="img/logo-small.png" class="logo-image"/>
+        </a>
+        <a class="py-2 d-none d-md-inline-block" href="#">Learn More</a>
+        <a class="py-2 d-none d-md-inline-block" href="https://docs.contrastsecurity.com">Docs</a>
+        <a class="py-2 d-none d-md-inline-block" href="https://github.com/Contrast-Security-OSS/join-the-team">Join the Team</a>
+      </div>
+    </nav>
+
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light contrastron"style="background-image: url(img/loginBackground.png)">
+      <div class="col-md-5 p-lg-5 mx-auto my-5 contrastron-sub">
+        <h1 class="display-4 font-weight-normal">Contrast Security for Developers</h1>
+        <p class="lead font-weight-normal">Use our tools and open-source software to help secure your applications.</p>
+      </div>
+    </div>
+
+    <h2 class="section-title" align="center">
+      IDE Plugins
+    </h2>
+    <div class="text-center">
+      <p class="lead" align="center">
+        Some marketing copy around what an IDE is and some other things
+      </p>
+    </div>
+
+    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="my-3 py-3">
+          <img src="img/vs.png" class="ide-icon">
+          <h2 class="display-5">Visual Studio</h2>
+          <p class="lead">And an even wittier subheading.</p>
+
+          <div class="links">
+            <a class="link source-link" href="#">Visual Studio marketplace</a><br/>
+            <a class="link source-link" href="#">Source code</a>
+          </div>
+        </div>
+      </div>
+      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="my-3 py-3">
+          <img src="img/eclipse.png" class="ide-icon">
+          <h2 class="display-5">Eclipse</h2>
+          <p class="lead">And an even wittier subheading.</p>
+
+          <div class="links">
+            <a class="link source-link" href="#">Eclipse plugin</a><br/>
+            <a class="link source-link" href="#">Source code</a>
+          </div>
+        </div>
+      </div>
+      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="my-3 py-3">
+          <img src="img/intellij.png" class="ide-icon">
+          <h2 class="display-5">JetBrains IntelliJ</h2>
+          <p class="lead">And an even wittier subheading.</p>
+
+          <div class="links">
+            <a class="link source-link" href="#">IntelliJ marketplace</a><br/>
+            <a class="link source-link" href="#">Source code</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <h2 class="section-title" align="center">
+      Browser Extensions
+    </h2>
+    <div class="text-center">
+      <p class="lead" align="center">
+        Some marketing copy around what we can do with our browser extensions
+      </p>
+    </div>
+
+    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="my-3 py-3">
+          <img src="img/chrome.png" class="ide-icon">
+          <h2 class="display-5">Chrome</h2>
+          <p class="lead">And an even wittier subheading.</p>
+
+          <div class="links">
+            <a class="link source-link" href="#">Chrome marketplace</a><br/>
+            <a class="link source-link" href="#">Source code</a>
+          </div>
+        </div>
+      </div>
+      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="my-3 py-3">
+          <img src="img/firefox.png" class="ide-icon">
+          <h2 class="display-5">Firefox</h2>
+          <p class="lead">And an even wittier subheading.</p>
+
+          <div class="links">
+            <a class="link source-link" href="#">Firefox marketplace</a><br/>
+            <a class="link source-link" href="#">Source code</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <h2 class="section-title" align="center">
+      CI Tools
+    </h2>
+    <div class="text-center">
+      <p class="lead" align="center">
+        Some marketing copy around CI tools
+      </p>
+    </div>
+
+    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="row">
+          <div class="col-md-2 offset-md-3">
+            <img src="img/jenkins.png" class="ide-icon">
+          </div>
+          <div class="col-md-4">
+            <h2 class="display-5">Jenkins</h2>
+            <p class="lead">And an even wittier subheading.</p>
+
+            <div class="links">
+              <a class="link source-link" href="#">Jenkins plugin</a><br/>
+              <a class="link source-link" href="#">Source code</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+    <h2 class="section-title" align="center">
+      Issue Tracking
+    </h2>
+    <div class="text-center">
+      <p class="lead" align="center">
+        Some marketing copy around what an IDE is and some other things
+      </p>
+    </div>
+
+    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="my-3 py-3">
+          <img src="img/jira.jpg" class="ide-icon">
+          <h2 class="display-5">JIRA</h2>
+          <p class="lead">Issue tracking. And an even wittier subheading.</p>
+
+          <div class="links">
+            <a class="link source-link" href="#">Visual Studio marketplace</a><br/>
+            <a class="link source-link" href="#">Source code</a>
+          </div>
+        </div>
+      </div>
+      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="my-3 py-3">
+          <img src="img/github.png" class="ide-icon">
+          <h2 class="display-5">Github</h2>
+          <p class="lead">Coming soon. And an even wittier subheading.</p>
+
+          <div class="links">
+            <a class="link source-link" href="#">Eclipse plugin</a><br/>
+            <a class="link source-link" href="#">Source code</a>
+          </div>
+        </div>
+      </div>
+      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="my-3 py-3">
+          <img src="img/rally.jpeg" class="ide-icon">
+          <h2 class="display-5">Rally</h2>
+          <p class="lead">Coming soon. And an even wittier subheading.</p>
+
+          <div class="links">
+            <a class="link source-link" href="#">Eclipse plugin</a><br/>
+            <a class="link source-link" href="#">Source code</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer class="container py-5">
+      <div class="row">
+        <div class="col-12 col-md">
+          <img src="img/contrastIcon128.png"/>
+        </div>
+        <div class="col-6 col-md">
+          <h5>Features</h5>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="#">Cool stuff</a></li>
+            <li><a class="text-muted" href="#">Random feature</a></li>
+            <li><a class="text-muted" href="#">Team feature</a></li>
+            <li><a class="text-muted" href="#">Stuff for developers</a></li>
+            <li><a class="text-muted" href="#">Another one</a></li>
+            <li><a class="text-muted" href="#">Last time</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md">
+          <h5>Resources</h5>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="#">Resource</a></li>
+            <li><a class="text-muted" href="#">Resource name</a></li>
+            <li><a class="text-muted" href="#">Another resource</a></li>
+            <li><a class="text-muted" href="#">Final resource</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md">
+          <h5>Resources</h5>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="#">Business</a></li>
+            <li><a class="text-muted" href="#">Education</a></li>
+            <li><a class="text-muted" href="#">Government</a></li>
+            <li><a class="text-muted" href="#">Gaming</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md">
+          <h5>About</h5>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="#">Team</a></li>
+            <li><a class="text-muted" href="#">Locations</a></li>
+            <li><a class="text-muted" href="#">Privacy</a></li>
+            <li><a class="text-muted" href="#">Terms</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+
+    <script>
+      Holder.addTheme('thumb', {
+        bg: '#55595c',
+        fg: '#eceeef',
+        text: 'Thumbnail'
+      });
+    </script>
+  </body>
+</html>
