Add some other repos

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a class="py-2" href="#">
           <img src="img/logo-small.png" class="logo-image"/>
         </a>
-        <a class="py-2 d-none d-md-inline-block" href="#">Learn More</a>
+        <a class="py-2 d-none d-md-inline-block" href="https://www.contrastsecurity.com/about">About Us</a>
         <a class="py-2 d-none d-md-inline-block" href="https://docs.contrastsecurity.com">Docs</a>
         <a class="py-2 d-none d-md-inline-block" href="https://github.com/Contrast-Security-OSS/join-the-team">Join the Team</a>
       </div>
@@ -43,6 +43,55 @@
       <div class="col-md-8 p-lg-5 mx-auto my-5 contrastron-sub">
         <h2 class="display-4 font-weight-normal">Contrast Security for Developers</h1>
         <p class="lead font-weight-normal">Use our tools and open-source software to help secure your applications.</p>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="section-header">
+        <h2 class="section-title">
+          Testing
+        </h2>
+        <div>
+          <p class="lead">
+            Tools that we use to test applications
+          </p>
+        </div>
+      </div>
+
+      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/sheepdog.png" class="ide-icon">
+            <h2 class="display-5 contrast-item-heading">Sheepdog</h2>
+            <p class="lead">Sheepdog is a simple tool to generate normal and attack traffic for OWASP WebGoat.</p>
+
+            <div class="links">
+              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/sheepdog">Source code</a>
+            </div>
+          </div>
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/js.png" class="ide-icon">
+            <h2 class="display-5 contrast-item-heading">Node Test Bench</h2>
+            <p class="lead">Intentionally vulnerable Node applications.<br/>&nbsp;</p>
+
+            <div class="links">
+              <a class="link source-link" href="#">Source code</a>
+            </div>
+          </div>
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/js.png" class="ide-icon">
+            <h2 class="display-5 contrast-item-heading">Node Dvnr </h2>
+            <p class="lead">Standalone utility for assessing Node app compatibility with Contrast.</p>
+
+            <div class="links">
+              <a class="link source-link" href="#">Source code</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
