--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="">
 
-    <title>Product example for Bootstrap</title>
+    <title>Contrast Security for Developers</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -39,10 +39,60 @@
       </div>
     </nav>
 
-    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light contrastron"style="background-image: url(img/loginBackground.png)">
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light contrastron">
       <div class="col-md-8 p-lg-5 mx-auto my-5 contrastron-sub">
-        <h2 class="display-4 font-weight-normal">Contrast Security for Developers</h1>
-        <p class="lead font-weight-normal">Use our tools and open-source software to help secure your applications.</p>
+        <h2 class="display-4 font-weight-normal contrastron-headline">Contrast Security for Developers</h1>
+        <p class="contrastron-lead font-weight-normal">Use our tools and open-source software to help secure your applications.</p>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="section-header">
+        <h2 class="section-title">
+          IDE Plugins
+        </h2>
+        <div>
+          <p class="lead">
+            Extensions and plugins to make your IDE work seamlessly with Contrast Security.
+          </p>
+        </div>
+      </div>
+
+      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/vs.png" class="ide-icon">
+            <h2 class="display-5 contrast-item-heading">Visual Studio</h2>
+            <p class="lead item-lead">See your application vulnerabilites within Visual Studio.</p>
+
+            <div class="links">
+              <a class="link source-link" href="https://marketplace.visualstudio.com/items?itemName=contrast-security.contrast-vs-ext">Visual Studio marketplace</a>
+            </div>
+          </div>
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/eclipse.png" class="ide-icon">
+            <h2 class="display-5 contrast-item-heading">Eclipse</h2>
+            <p class="lead item-lead">The Contrast for Eclipse plugin lists the vulnerabilities from your application directly in your Eclipse environment.</p>
+
+            <div class="links">
+              <a class="link source-link" href="https://marketplace.eclipse.org/content/contrast-eclipse">Eclipse plugin</a><br/>
+              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/ide-plugin-eclipse2">Source code</a>
+            </div>
+          </div>
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/intellij.png" class="ide-icon">
+            <h2 class="display-5 contrast-item-heading">JetBrains IntelliJ</h2>
+            <p class="lead item-lead">Our plugin for IntelliJ allows your IDE to show where the vulnerabilites are in your code.</p>
+
+            <div class="links">
+              <a class="link source-link" href="https://plugins.jetbrains.com/plugin/10335-contrast">IntelliJ Plugin</a><br/>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -85,61 +135,9 @@
           <div class="my-3 py-3">
             <img src="img/js.png" class="ide-icon">
             <h2 class="display-5 contrast-item-heading">Node Dvnr </h2>
-            <p class="lead">Standalone utility for assessing Node app compatibility with Contrast.</p>
+            <p class="item-lead">Standalone utility for assessing Node app compatibility with Contrast.</p>
 
             <div class="links">
-              <a class="link source-link" href="#">Source code</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="section-header">
-        <h2 class="section-title">
-          IDE Plugins
-        </h2>
-        <div>
-          <p class="lead">
-            Some marketing copy around what an IDE is and some other things
-          </p>
-        </div>
-      </div>
-
-      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
-          <div class="my-3 py-3">
-            <img src="img/vs.png" class="ide-icon">
-            <h2 class="display-5 contrast-item-heading">Visual Studio</h2>
-            <p class="lead">And an even wittier subheading.</p>
-
-            <div class="links">
-              <a class="link source-link" href="#">Visual Studio marketplace</a><br/>
-              <a class="link source-link" href="#">Source code</a>
-            </div>
-          </div>
-        </div>
-        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
-          <div class="my-3 py-3">
-            <img src="img/eclipse.png" class="ide-icon">
-            <h2 class="display-5 contrast-item-heading">Eclipse</h2>
-            <p class="lead">And an even wittier subheading.</p>
-
-            <div class="links">
-              <a class="link source-link" href="#">Eclipse plugin</a><br/>
-              <a class="link source-link" href="#">Source code</a>
-            </div>
-          </div>
-        </div>
-        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
-          <div class="my-3 py-3">
-            <img src="img/intellij.png" class="ide-icon">
-            <h2 class="display-5 contrast-item-heading">JetBrains IntelliJ</h2>
-            <p class="lead">And an even wittier subheading.</p>
-
-            <div class="links">
-              <a class="link source-link" href="#">IntelliJ marketplace</a><br/>
               <a class="link source-link" href="#">Source code</a>
             </div>
           </div>
