--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <a class="py-2" href="#">
           <img src="img/logo-small.png" class="logo-image"/>
         </a>
-        <a class="py-2 d-none d-md-inline-block" href="https://www.contrastsecurity.com/about">About Us</a>
-        <a class="py-2 d-none d-md-inline-block" href="https://docs.contrastsecurity.com">Docs</a>
         <a class="py-2 d-none d-md-inline-block" href="https://github.com/Contrast-Security-OSS/join-the-team">Join the Team</a>
+        <a class="py-2 d-none d-md-inline-block" href="https://www.contrastsecurity.com/about">About Contrast</a>
+        <a class="py-2 d-none d-md-inline-block" href="https://docs.contrastsecurity.com">Docs</a>
       </div>
     </nav>
 
@@ -113,7 +113,7 @@
           <div class="my-3 py-3">
             <img src="img/sheepdog.png" class="ide-icon">
             <h2 class="display-5 contrast-item-heading">Sheepdog</h2>
-            <p class="lead">Sheepdog is a simple tool to generate normal and attack traffic for OWASP WebGoat.</p>
+            <p class="lead item-lead">Sheepdog is a simple tool to generate normal and attack traffic for OWASP WebGoat.</p>
 
             <div class="links">
               <a class="link source-link" href="https://github.com/Contrast-Security-OSS/sheepdog">Source code</a>
@@ -124,10 +124,10 @@
           <div class="my-3 py-3">
             <img src="img/js.png" class="ide-icon">
             <h2 class="display-5 contrast-item-heading">Node Test Bench</h2>
-            <p class="lead">Intentionally vulnerable Node applications.<br/>&nbsp;</p>
+            <p class="lead item-lead">Intentionally vulnerable Node applications.<br/>&nbsp;</p>
 
             <div class="links">
-              <a class="link source-link" href="#">Source code</a>
+              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/NodeTestBench">Source code</a>
             </div>
           </div>
         </div>
@@ -135,10 +135,10 @@
           <div class="my-3 py-3">
             <img src="img/js.png" class="ide-icon">
             <h2 class="display-5 contrast-item-heading">Node Dvnr </h2>
-            <p class="item-lead">Standalone utility for assessing Node app compatibility with Contrast.</p>
+            <p class="lead item-lead">Standalone utility for assessing Node app compatibility with Contrast.</p>
 
             <div class="links">
-              <a class="link source-link" href="#">Source code</a>
+              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/node-dvnr">Source code</a>
             </div>
           </div>
         </div>
@@ -152,7 +152,7 @@
         </h2>
         <div>
           <p class="lead">
-            Some marketing copy around what we can do with our browser extensions
+            Working with an application that's in Teamserver? Use our browser plugins to see vulnerabilites that apply to pages in
           </p>
         </div>
       </div>
@@ -162,11 +162,11 @@
           <div class="my-3 py-3">
             <img src="img/chrome.png" class="ide-icon">
             <h2 class="display-5">Chrome</h2>
-            <p class="lead">And an even wittier subheading.</p>
+            <p class="lead item-lead">See vulnerabilites as you browse and develop your application.</p>
 
             <div class="links">
               <a class="link source-link" href="#">Chrome marketplace</a><br/>
-              <a class="link source-link" href="#">Source code</a>
+              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-chrome-extension">Source code</a>
             </div>
           </div>
         </div>
@@ -174,11 +174,9 @@
           <div class="my-3 py-3">
             <img src="img/firefox.png" class="ide-icon">
             <h2 class="display-5">Firefox</h2>
-            <p class="lead">And an even wittier subheading.</p>
+            <p class="lead">Coming soon.</p>
 
             <div class="links">
-              <a class="link source-link" href="#">Firefox marketplace</a><br/>
-              <a class="link source-link" href="#">Source code</a>
             </div>
           </div>
         </div>
@@ -193,24 +191,24 @@
         </h2>
         <div>
           <p class="lead">
-            Some marketing copy around CI tools
+            Fail builds and take action if vulnerable code is comitted to your source repository.
           </p>
         </div>
       </div>
 
       <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
-          <div class="row">
+          <div class="row" style="padding:10px">
             <div class="col-md-2 offset-md-3">
               <img src="img/jenkins.png" class="ide-icon-big">
             </div>
             <div class="col-md-4">
               <h2 class="display-5">Jenkins</h2>
-              <p class="lead">And an even wittier subheading.</p>
+              <p class="lead"></p>
 
               <div class="links">
-                <a class="link source-link" href="#">Jenkins plugin</a><br/>
-                <a class="link source-link" href="#">Source code</a>
+                <a class="link source-link" href="https://plugins.jenkins.io/contrast-continuous-application-security">Jenkins plugin</a><br/>
+                <a class="link source-link" href="https://github.com/jenkinsci/contrast-continuous-application-security-plugin">Source code</a>
               </div>
             </div>
           </div>
@@ -227,7 +225,7 @@
         </h2>
         <div>
           <p class="lead">
-            Some marketing copy around what an IDE is and some other things
+            Open issues automatically and get the right people involved when we find vulnerabilites in your application.
           </p>
         </div>
       </div>
@@ -237,11 +235,11 @@
           <div class="my-3 py-3">
             <img src="img/jira.jpg" class="ide-icon">
             <h2 class="display-5">JIRA</h2>
-            <p class="lead">And an even wittier subheading.</p>
+            <p class="lead">Automatically open issues when we find vulnerabilites.</p>
 
             <div class="links">
-              <a class="link source-link" href="#">Visual Studio marketplace</a><br/>
-              <a class="link source-link" href="#">Source code</a>
+
+                <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#jira">Documentation</a><br/>
             </div>
           </div>
         </div>
@@ -249,24 +247,14 @@
           <div class="my-3 py-3">
             <img src="img/github.png" class="ide-icon">
             <h2 class="display-5">Github</h2>
-            <p class="lead">Coming soon. <br/>And an even wittier subheading.</p>
-
-            <div class="links">
-              <a class="link source-link" href="#">Eclipse plugin</a><br/>
-              <a class="link source-link" href="#">Source code</a>
-            </div>
+            <p class="lead">Coming soon.</p>
           </div>
         </div>
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
           <div class="my-3 py-3">
             <img src="img/rally.jpeg" class="ide-icon">
             <h2 class="display-5">Rally</h2>
-            <p class="lead">Coming soon. <br/>And an even wittier subheading.</p>
-
-            <div class="links">
-              <a class="link source-link" href="#">Eclipse plugin</a><br/>
-              <a class="link source-link" href="#">Source code</a>
-            </div>
+            <p class="lead">Coming soon.</p>
           </div>
         </div>
       </div>
@@ -278,52 +266,36 @@
           <img src="img/contrastIcon128.png"/>
         </div>
         <div class="col-6 col-md">
-          <h5>Features</h5>
-          <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="#">Cool stuff</a></li>
-            <li><a class="text-muted" href="#">Random feature</a></li>
-            <li><a class="text-muted" href="#">Team feature</a></li>
-            <li><a class="text-muted" href="#">Stuff for developers</a></li>
-            <li><a class="text-muted" href="#">Another one</a></li>
-            <li><a class="text-muted" href="#">Last time</a></li>
-          </ul>
-        </div>
-        <div class="col-6 col-md">
-          <h5>Resources</h5>
-          <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="#">Resource</a></li>
-            <li><a class="text-muted" href="#">Resource name</a></li>
-            <li><a class="text-muted" href="#">Another resource</a></li>
-            <li><a class="text-muted" href="#">Final resource</a></li>
-          </ul>
-        </div>
-        <div class="col-6 col-md">
-          <h5>Resources</h5>
-          <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="#">Business</a></li>
-            <li><a class="text-muted" href="#">Education</a></li>
-            <li><a class="text-muted" href="#">Government</a></li>
-            <li><a class="text-muted" href="#">Gaming</a></li>
-          </ul>
-        </div>
-        <div class="col-6 col-md">
           <h5>About</h5>
           <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="#">Team</a></li>
-            <li><a class="text-muted" href="#">Locations</a></li>
-            <li><a class="text-muted" href="#">Privacy</a></li>
-            <li><a class="text-muted" href="#">Terms</a></li>
+            <li><a class="text-muted" href="https://github.com/Contrast-Security-OSS/join-the-team">Join The Team</a></li>
+            <li><a class="text-muted" href="https://www.contrastsecurity.com/about">About Us</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md">
+          <h5>Support</h5>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="https://www.contrastsecurity.com/contact-us">Contact Us</a></li>
+            <li><a class="text-muted" href="https://www.contrastsecurity.com/privacy-matters">Privacy Matters</a></li>
+            <li><a class="text-muted" href="https://www.contrastsecurity.com/enduser-terms-0317a">Terms of Service</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md">
+          <h5>Products</h5>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="https://www.contrastsecurity.com/interactive-application-security-testing-iast">Contrast Assess</a></li>
+            <li><a class="text-muted" href="https://www.contrastsecurity.com/runtime-application-self-protection-rasp">Contrast Protect</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md">
+          <h5>Resources</h5>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="https://www.contrastsecurity.com/security-influencers">Blog</a></li>
+            <li><a class="text-muted" href="https://www.contrastsecurity.com/security-influencers/topic/contrast-news">News</a></li>
+            <li><a class="text-muted" href="https://www.contrastsecurity.com/resources/product-info">Product Info</a></li>
           </ul>
         </div>
       </div>
     </footer>
-
-    <script>
-      Holder.addTheme('thumb', {
-        bg: '#55595c',
-        fg: '#eceeef',
-        text: 'Thumbnail'
-      });
-    </script>
   </body>
 </html>
