--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
           <div class="my-3 py-3">
-            <img src="img/python.svg.png" class="ide-icon">
+            <img src="img/Python.svg.png" class="ide-icon">
             <h2 class="display-5 contrast-item-heading">Python</h2>
 
             <div class="links">
