--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
           <div class="my-3 py-3">
-            <img src="img/java.png" class="ide-icon">
+            <img src="img/java.jpg" class="ide-icon">
             <h2 class="display-5 contrast-item-heading">Java</h2>
 
             <div class="links">
@@ -134,7 +134,7 @@
         </div>
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
           <div class="my-3 py-3">
-            <img src="img/dot-net.jpg" class="ide-icon">
+            <img src="img/dot-net.svg" class="ide-icon">
             <h2 class="display-5 contrast-item-heading">.Net</h2>
 
             <div class="links">
