--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
           <div class="my-3 py-3">
-            <img src="img/dot-net.svg" class="ide-icon">
+            <img src="img/dot-net.png" class="ide-icon">
             <h2 class="display-5 contrast-item-heading">.Net</h2>
 
             <div class="links">
