Add Github documentation link

--- a/index.html
+++ b/index.html
@@ -308,7 +308,10 @@
           <div class="my-3 py-3">
             <img src="img/github.png" class="ide-icon">
             <h2 class="display-5">Github</h2>
-            <p class="lead">Coming soon.</p>
+            <p class="lead">Link you applications to your Github repositories</p>
+            <div class="links">
+              <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#github">Documentation</a>
+            </div>
           </div>
         </div>
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
