--- a/index.html
+++ b/index.html
@@ -209,6 +209,84 @@
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">
+          Continous Integration (CI) Tools
+        </h2>
+        <div>
+          <p class="lead">
+            Fail builds and take action if vulnerable code is comitted to your source repository.
+          </p>
+        </div>
+      </div>
+
+      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/jenkins.png" class="ide-icon-big">
+            <h2 class="display-5">Jenkins</h2>
+
+            <div class="links">
+              <a class="link source-link" href="https://plugins.jenkins.io/contrast-continuous-application-security">Jenkins plugin</a><br/>
+              <a class="link source-link" href="https://github.com/jenkinsci/contrast-continuous-application-security-plugin">Source code</a><br/>
+              <a class="link source-link" href="https://docs.contrastsecurity.com/tools-ci.html#jenkins">Documentation</a>
+            </div>
+          </div>
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/bamboo3.png" class="ide-icon-big" style="width:193px">
+            <h2 class="display-5">Bamboo</h2>
+
+            <div class="links">
+              <a class="link source-link" href="https://marketplace.atlassian.com/apps/1219111/contrast-security-for-bamboo?hosting=server&tab=overview">Atlassian Marketplace</a><br/>
+              <a class="link source-link" href="https://github.com/jenkinsci/contrast-continuous-application-security-plugin">Source code</a><br/>
+              <a class="link source-link" href="https://docs.contrastsecurity.com/tools-ci.html#bamboo">Documentation</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="section-header">
+        <h2 class="section-title">
+          Build Tools
+        </h2>
+        <div>
+          <p class="lead">
+            Make industry-leading security of your build process.
+          </p>
+        </div>
+      </div>
+
+      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <h2 class="display-5">Maven</h2>
+
+            <div class="links">
+              <a class="link source-link" href="https://search.maven.org/search?q=a:contrast-maven-plugin">Maven Central</a><br/>
+              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-maven-plugin">Source code</a><br/>
+              <a class="link source-link" href="https://docs.contrastsecurity.com/tools-build.html#maven">Documentation</a>
+            </div>
+          </div>
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <h2 class="display-5">Gradle</h2>
+
+            <div class="links">
+              <a class="link source-link" href="https://plugins.gradle.org/plugin/com.contrastsecurity.contrastplugin">gradle.org</a><br/>
+              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-gradle-plugin">Source code</a><br/>
+              <a class="link source-link" href="https://docs.contrastsecurity.com/tools-build.html#gradleo">Documentation</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="section-header">
+        <h2 class="section-title">
           Browser Extensions
         </h2>
         <div>
@@ -244,41 +322,6 @@
       </div>
     </div>
 
-
-    <div class="container">
-      <div class="section-header">
-        <h2 class="section-title">
-          CI Tools
-        </h2>
-        <div>
-          <p class="lead">
-            Fail builds and take action if vulnerable code is comitted to your source repository.
-          </p>
-        </div>
-      </div>
-
-      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
-          <div class="row" style="padding:10px">
-            <div class="col-md-2 offset-md-3">
-              <img src="img/jenkins.png" class="ide-icon-big">
-            </div>
-            <div class="col-md-4">
-              <h2 class="display-5">Jenkins</h2>
-              <p class="lead"></p>
-
-              <div class="links">
-                <a class="link source-link" href="https://plugins.jenkins.io/contrast-continuous-application-security">Jenkins plugin</a><br/>
-                <a class="link source-link" href="https://github.com/jenkinsci/contrast-continuous-application-security-plugin">Source code</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">
@@ -296,7 +339,6 @@
           <div class="my-3 py-3">
             <img src="img/jira.jpg" class="ide-icon">
             <h2 class="display-5">JIRA</h2>
-            <p class="lead">Automatically open issues when we find vulnerabilites.</p>
 
             <div class="links">
 
@@ -307,8 +349,10 @@
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
           <div class="my-3 py-3">
             <img src="img/github.png" class="ide-icon">
-            <h2 class="display-5">Github</h2>
-            <p class="lead">Coming soon.</p>
+            <h2 class="display-5">Github</h2>            <div class="links">
+
+                <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#github">Documentation</a><br/>
+            </div>
           </div>
         </div>
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
