--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         </h2>
         <div>
           <p class="lead">
-            Make industry-leading security of your build process.
+            Make industry-leading security a part of your build process.
           </p>
         </div>
       </div>
