--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         </h2>
         <div>
           <p class="lead">
-            Working with an application that's in Teamserver? Use our browser plugins to see vulnerabilites that apply to pages in
+            Use our browser plugins to see vulnerabilites that apply to pages in your development app.
           </p>
         </div>
       </div>
