Add Sumo Logic and Splunk

--- a/index.html
+++ b/index.html
@@ -287,6 +287,43 @@
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">
+          SIEM Integrations
+        </h2>
+        <div>
+          <p class="lead">
+            Dashboards to imporve your security information and event management
+          </p>
+        </div>
+      </div>
+
+      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/splunk.jpeg" class="ide-icon">
+            <h2 class="display-5">Splunk</h2>
+
+            <div class="links">
+              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/ContrastSplunkApp">Splunk Marketplace</a><br/>
+              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-maven-plugin">Source code</a><br/>
+            </div>
+          </div>
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/sumo-logic-logo.jpg" class="ide-icon">
+            <h2 class="display-5">Sumo Logic</h2>
+
+            <div class="links">
+              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/ContrastSumoLogicDashboards">Source code</a><br/>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="section-header">
+        <h2 class="section-title">
           Browser Extensions
         </h2>
         <div>
