Change class of images

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
       <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
           <div class="my-3 py-3">
-            <img src="img/splunk.jpeg" class="ide-icon">
+            <img src="img/splunk.jpeg" class="ide-icon-big">
             <h2 class="display-5">Splunk</h2>
 
             <div class="links">
@@ -310,7 +310,7 @@
         </div>
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
           <div class="my-3 py-3">
-            <img src="img/sumo-logic-logo.jpg" class="ide-icon">
+            <img src="img/sumo-logic-logo.jpg" class="ide-icon-big">
             <h2 class="display-5">Sumo Logic</h2>
 
             <div class="links">
