--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </h2>
         <div>
           <p class="lead">
-            Plugin to your code and with directly with Contrast APIs
+            Plugin to your code and work directly with Contrast APIs
           </p>
         </div>
       </div>
