Fix Splunk Links

--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
             <h2 class="display-5">Splunk</h2>
 
             <div class="links">
-              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/ContrastSplunkApp">Splunk Marketplace</a><br/>
-              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-maven-plugin">Source code</a><br/>
+              <a class="link source-link" href="https://splunkbase.splunk.com/app/4140/">Splunk Marketplace</a><br/>
+              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/ContrastSplunkApp">Source code</a><br/>
             </div>
           </div>
         </div>
