--- a/index.html
+++ b/index.html
@@ -160,15 +160,39 @@
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">
-          Continous Integration (CI) Tools
+          Continous Integration & Continuous Delivery (CI/CD) Tools
         </h2>
         <div>
           <p class="lead">
-            Fail builds and take action if vulnerable code is comitted to your source repository.
+            Fail builds, gate releases, and take action if vulnerable code is comitted to your source repository.
           </p>
         </div>
       </div>
 
+      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/azure.png" class="ide-icon-big">
+            <h2 class="display-5">Azure DevOps</h2>
+
+            <div class="links">
+              <a class="link source-link" href="https://marketplace.visualstudio.com/items?itemName=contrast-security.contrast-integration">Azure Marketplace</a><br/>
+              <a class="link source-link" href="https://marketplace.visualstudio.com/items?itemName=contrast-security.contrast-integration">Documentation</a>
+            </div>
+          </div>
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/circleci.png" class="ide-icon-big">
+            <h2 class="display-5">CircleCI Orb</h2>
+
+            <div class="links">
+              <a class="link source-link" href="https://circleci.com/orbs/registry/orb/contrastsecurity/verify">CircleCI Orb Registry</a><br/>
+              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-security-orb">Source code</a>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
           <div class="my-3 py-3">
@@ -266,6 +290,16 @@
 
             <div class="links">
               <a class="link source-link" href="https://github.com/Contrast-Security-OSS/ContrastSumoLogicDashboards">Source code</a><br/>
+            </div>
+          </div>
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/datadog.png" class="ide-icon-big">
+            <h2 class="display-5">DataDog</h2>
+
+            <div class="links">
+              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/ContrastDataDogDashboard">Source code</a><br/>
             </div>
           </div>
         </div>
