--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="my-3 py-3">
             <img src="img/vs.png" class="ide-icon">
             <h2 class="display-5 contrast-item-heading">Visual Studio</h2>
-            <p class="lead item-lead">See your application vulnerabilites within Visual Studio.</p>
+            <p class="lead item-lead">See your application vulnerabilities within Visual Studio.</p>
 
             <div class="links">
               <a class="link source-link" href="https://marketplace.visualstudio.com/items?itemName=contrast-security.contrast-vs-ext">Visual Studio marketplace</a>
@@ -92,7 +92,7 @@
           <div class="my-3 py-3">
             <img src="img/intellij.png" class="ide-icon">
             <h2 class="display-5 contrast-item-heading">JetBrains IntelliJ</h2>
-            <p class="lead item-lead">Our plugin for IntelliJ allows your IDE to show where the vulnerabilites are in your code.</p>
+            <p class="lead item-lead">Our plugin for IntelliJ allows your IDE to show where the vulnerabilities are in your code.</p>
 
             <div class="links">
               <a class="link source-link" href="https://plugins.jetbrains.com/plugin/10335-contrast">IntelliJ Plugin</a><br/>
@@ -160,11 +160,11 @@
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">
-          Continous Integration & Continuous Delivery (CI/CD) Tools
+          Continuous Integration & Continuous Delivery (CI/CD) Tools
         </h2>
         <div>
           <p class="lead">
-            Fail builds, gate releases, and take action if vulnerable code is comitted to your source repository.
+            Fail builds, gate releases, and take action if vulnerable code is committed to your source repository.
           </p>
         </div>
       </div>
@@ -266,7 +266,7 @@
         </h2>
         <div>
           <p class="lead">
-            Dashboards to imporve your security information and event management
+            Dashboards to improve your security information and event management
           </p>
         </div>
       </div>
@@ -362,7 +362,7 @@
         </h2>
         <div>
           <p class="lead">
-            Use our browser plugins to see vulnerabilites that apply to pages in your development app.
+            Use our browser plugins to see vulnerabilities that apply to pages in your development app.
           </p>
         </div>
       </div>
@@ -372,7 +372,7 @@
           <div class="my-3 py-3">
             <img src="img/chrome.png" class="ide-icon">
             <h2 class="display-5">Chrome</h2>
-            <p class="lead item-lead">See vulnerabilites as you browse and develop your application.</p>
+            <p class="lead item-lead">See vulnerabilities as you browse and develop your application.</p>
 
             <div class="links">
               <a class="link source-link" href="#">Chrome marketplace</a><br/>
@@ -400,7 +400,7 @@
         </h2>
         <div>
           <p class="lead">
-            Open issues automatically and get the right people involved when we find vulnerabilites in your application.
+            Open issues automatically and get the right people involved when we find vulnerabilities in your application.
           </p>
         </div>
       </div>
@@ -420,7 +420,7 @@
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
           <div class="my-3 py-3">
             <img src="img/github.png" class="ide-icon">
-            <h2 class="display-5">Github</h2>            
+            <h2 class="display-5">GitHub</h2>            
             <div class="links">
 
                 <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#github">Documentation</a><br/>
